partial styling of dictionary app

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+body {
+  background-color: #faf9f6;
+}
+
+a {
+  color: #b0c4b1;
+}
+
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
 .App-header {
   margin: 30px 0;
 }
