--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,3 +1,24 @@
-.Dictionary {
-    
+.Dictionary h1 {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+.Dictionary section {
+  background: white;
+  padding: 30px;
+  border-radius: 6px;
+  box-shadow: 0 10px 20px rgb(0 0 0 / 10%);
+  margin: 20px 0;
+}
+.Dictionary input {
+  color: #333;
+  width: 100%;
+  padding: 6px 4px;
+  border: 1px solid #dddd;
+  border-radius: 6px;
+}
+
+.Dictionary .hint {
+  font-size: 11px;
+  margin-top: 5px;
 }
